test/data/parse-errors.test
-- Test cases for parser errors. Each test case consists of two sections.
-- The first section contains [case NAME] followed by the input code, while
-- the second section contains [out] followed by the output from the parser.
--
-- The input file name in errors is "file".
--
-- Comments starting with "--" in this file will be ignored, except for lines
-- starting with "----" that are not ignored. The first two dashes of these
-- lines are interpreted as escapes and removed.

[case testInvalidFunction]
def f()
  pass
[out]
file: In function "f":
file, line 1: Parse error before end of line
file: At top level:
file, line 2: Inconsistent indentation

[case testExtraGtInType]
a<b>> c
int f(a<b>> c):
  pass
[out]
-- IDEA: Most of these errors are bogus
file, line 1: Parse error before >>
file: In function "f":
file, line 2: Parse error before >>
file, line 2: Parse error before )
file: At top level:
file, line 2: Parse error before :
file, line 3: Inconsistent indentation


[case testMissingIndent]
if x:
1
[out]
file, line 2: Expected an indented block

[case testUnexpectedIndent]
1
 2
[out]
file, line 2: Inconsistent indentation

[case testInconsistentIndent]
if x:
  1
   1
[out]
file, line 3: Inconsistent indentation

[case testInconsistentIndent]
if x:
   1
  1
[out]
file, line 3: Inconsistent indentation

[case testInvalidCast]
(a<b>>)x
[out]
file, line 1: Parse error before )

[case testInvalidBinaryOp]
1>
a*
a+1*
[out]
file, line 1: Parse error before end of line
file, line 2: Parse error before end of line
file, line 3: Parse error before end of line

[case testInvalidTypeApplication]
f<x>
f<y>>()
f<x>(
[out]
file, line 1: Parse error before end of line
file, line 2: Parse error before >>
file, line 3: Parse error before end of line

[case testInvalidSuperClass]
class A(C<):
  pass
[out]
file: In class "A":
file, line 1: Parse error before )

[case testEmptySuperClass]
class A():
  pass
[out]
file: In class "A":
file, line 1: Parse error before )

[case testMissingSuperClass]
class A(:
  pass
[out]
file: In class "A":
file, line 1: Parse error before :
file, line 2: Parse error before end of file

[case testUnexpectedEof]
if 1:
[out]
file, line 1: Expected an indented block

[case testInvalidTypePrefix]
<t, s> []
<t> 1
<t> x
[out]
file, line 1: Expected a single type before list literal
file, line 2: Expected a list, dictionary or non-empty tuple after <...>
file, line 3: Expected a list, dictionary or non-empty tuple after <...>

[case testInvalidTypeForTuple]
<t, s> ()
<t> (1, 2)
[out]
file, line 1: Expected a list, dictionary or non-empty tuple after <...>
file, line 2: Wrong number of types for a tuple literal

[case testInvalidKeywordArguments1]
f(x=y, z)
[out]
file, line 1: Parse error before )

[case testInvalidKeywordArguments2]
f(**x, y=z)
[out]
file, line 1: Parse error before "y"

[case testInvalidKeywordArguments3]
f(**x, y)
[out]
file, line 1: Parse error before "y"

[case testInvalidVarArgs]
f(*x, y)
[out]
file, line 1: Parse error before "y"